# poke-matchup

./: pyproject.toml  rxconfig.py  test.py
poke_matchup/: poke_matchup.py
poke_matchup/components/: __init__.py  createTeam.py  misc.py  navBar.py
poke_matchup/routes/: __init__.py  about.py  comparison.py  detail.py  index.py
poke_matchup/state/: __init__.py  baseState.py  makeTeam.py  schema.py
